--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -6,7 +6,7 @@
 .privacy{
     @import '../scss-var/terms';
     .privacy-body{
-        width: 65%;
+        width: 90%;
         font-family: 'Roboto', $font-stack;
         color: darken(lightslategrey, 20);
         font-weight: 100;
@@ -26,9 +26,10 @@
             }
         }
         .breadcromb{
-            padding: 20px 0px;
+            padding: 20px 10px;
             display: flex;
             align-content: space-between;
+            width: 100%;
             .space-emt{
                 flex: 1 1 auto;
             }
@@ -53,4 +54,41 @@
         animation: bodyIn 1.5s;
         transition: 1.5s;
     }
+}
+
+@media only screen and (min-width: 770px) {
+
+    .privacy{
+        .terms-header{
+            height: 300px;
+            background-color: darken(#034060, 2);
+            text-align: center;
+            overflow: hidden;
+            h1{
+                text-align: center;
+                font-size: 2em;
+                font-family: $font-stack;
+                color: #f5f5f5;
+                animation: headerIn 1.1s;
+                transition: .5s;
+                padding: 0 20px;
+                padding-top: 130px;
+            }
+            .text-head{
+                position: absolute;
+                width: 400px;
+                left: 50%;
+                margin-left: -200px;
+            }
+        }
+        .terms-body{
+            // width: 100%;
+            // font-family: 'Roboto', $font-stack;
+            // color: darken(lightslategrey, 20);
+            // font-weight: 100;
+            // padding: 20px;
+        }
+    }
+    // @import 'media-query/large-desktop';
+    
 }
