--- a/src/app/scss-var/_terms.scss
+++ b/src/app/scss-var/_terms.scss
@@ -9,26 +9,31 @@
     }
 }
 .terms-header{
-    height: 250px;
-    background-color: #034060;
+    height: 300px;
+    width: 100%;
+    background-color: darken(#034060, 2);
     text-align: center;
     overflow: hidden;
+
     h1{
         text-align: center;
-        padding-top: 100px;
-        font-size: 2em;
+        font-size: 1.5em;
         font-family: $font-stack;
-        color: #c2185b;
+        color: #f5f5f5;
         animation: headerIn 1.1s;
         transition: .5s;
+        text-transform: uppercase;
+        // padding: 0 20px;
+        padding-top: 100px;
     }
     .text-head{
         position: absolute;
-        width: 400px;
+        width: 200px;
         left: 50%;
-        margin-left: -200px;
+        margin-left: -100px;
     }
     p{
+        display: none;
         width: 75%;
         height: 700px;
         text-align: center;
@@ -41,5 +46,30 @@
         opacity: 0.1;
         // margin-right: -200px;
         transform: rotate(10deg);
+    }
+}
+@media only screen and (max-width: 768px){
+    .terms-header{
+        height: 200px;
+        width: 100%;
+        // background-color: darken(#034060, 2);
+        text-align: center;
+        overflow: hidden;
+        h1{
+            text-align: center;
+            font-size: 1.2em;
+            font-family: $font-stack;
+            color: #f5f5f5;
+            animation: headerIn 1.1s;
+            transition: .5s;
+            // padding: 0 20px;
+            padding-top: 100px;
+        }
+        // .text-head{
+        //     position: absolute;
+        //     width: 200px;
+        //     left: 50%;
+        //     margin-left: -100px;
+        // }
     }
 }
