--- a/src/app/terms-condition/terms-condition.component.scss
+++ b/src/app/terms-condition/terms-condition.component.scss
@@ -4,30 +4,31 @@
     to{opacity: 1}
 }
 .terms-condition{
+    width: 100%;
     @import '../scss-var/terms';
 
     .terms-body{
-        width: 65%;
+        width: 90%;
         font-family: 'Roboto', $font-stack;
         color: darken(lightslategrey, 20);
         font-weight: 100;
         ol{
-            padding-left: 20px;
+            padding-left: 10px;
         }
         ol > li{
-           padding: 20px 0px;
+           padding: 10px 0px;
            line-height: 30px;
            h1{
                font-size: 1.2em;
                text-transform: uppercase;
-               padding-left: 20px;
+               padding-left: 10px;
                color: lightslategray;
            }
 
            ol > li{
                padding: 5px 0px;
             //    font-size: 1.2em;
-               padding-left: 20px;
+               padding-left: 10px;
                line-height: 20px;
                ul li{
                    padding-left: 10px;
@@ -37,9 +38,12 @@
            }
         }
         .breadcromb{
-            padding: 20px 0px;
+            // display: none;
+            overflow: hidden;
+            width: 100%;
+            padding: 10px 10px;
             display: flex;
-            align-content: space-between;
+            // align-content: space-between;
             .space-emt{
                 flex: 1 1 auto;
             }
@@ -66,6 +70,42 @@
     }
 }
 
+@media only screen and (min-width: 770px) {
+
+    .terms-condition{
+        .terms-header{
+            height: 300px;
+            background-color: darken(#034060, 2);
+            text-align: center;
+            overflow: hidden;
+            h1{
+                text-align: center;
+                font-size: 2em;
+                font-family: $font-stack;
+                color: #f5f5f5;
+                animation: headerIn 1.1s;
+                transition: .5s;
+                padding: 0 20px;
+                padding-top: 130px;
+            }
+            .text-head{
+                position: absolute;
+                width: 400px;
+                left: 50%;
+                margin-left: -200px;
+            }
+        }
+        .terms-body{
+            // width: 100%;
+            // font-family: 'Roboto', $font-stack;
+            // color: darken(lightslategrey, 20);
+            // font-weight: 100;
+            // padding: 20px;
+        }
+    }
+    // @import 'media-query/large-desktop';
+    
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1400px) {
