update before release

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,7 +89,7 @@
     </div>
 </div>
 
-<div (click)="goToto()" class="scroll-up" matRipple [matRippleColor]="rippleColor">
+<div (click)="goToto()" class="scroll-up" matRipple>
   <mat-icon>keyboard_arrow_up</mat-icon>
     <!-- <button (click)="goToto()">gotop</button> -->
 </div>
