--- a/src/app/media-query/_desktop.scss
+++ b/src/app/media-query/_desktop.scss
@@ -1,29 +1,6 @@
 
 
-.pointer-container{
-    display: block;
-    position: absolute;
-    top: 55%;
-    margin: 0 auto;
-    left: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: -50px;
-    z-index: 10;
-    // background-color: red;
-    text-align: center;
-    // border: 1px solid lighten(#034060, 10);
-    // border-radius: 50%;
-    mat-icon{
-        font-size: 3em;
-        width: 100px;
-        height: 100px;
-        transition: .5s;
-        padding-top: 20px;
-        color: lighten(#034060, 30);
-    }
 
-}
 
 .header-section{
     width: 100%;
@@ -36,6 +13,31 @@
         // background-repeat: no-repeat;
         // background-attachment: fixed;
         overflow: hidden;
+        .pointer-container{
+            display: block;
+            position: absolute;
+            bottom: 0;
+            margin: 0 auto;
+            margin-bottom: 20px;
+            left: 50%;
+            width: 100px;
+            height: 100px;
+            margin-left: -50px;
+            z-index: 10;
+            // background-color: red;
+            text-align: center;
+            // border: 1px solid lighten(#034060, 10);
+            // border-radius: 50%;
+            mat-icon{
+                font-size: 3em;
+                width: 100px;
+                height: 100px;
+                transition: .5s;
+                padding-top: 20px;
+                color: lighten(#034060, 30);
+            }
+        
+        }
         img{
             width: 100%;
             position: absolute;
@@ -49,7 +51,7 @@
             width: 100%;
             height: $header-height;
             display: flex;
-            background-color: rgba(#034060, 0.9);
+            // background-color: rgba(#034060, 0.9);
             z-index: 10;
             .float-image{
                 position: relative;
@@ -60,7 +62,7 @@
                 border: 10px solid #ffffff;
                 border-radius: 1% 20% 20% 40%;
                 transform: rotate(-10deg);
-                background-color: #034060;
+                // background-color: #034060;
                 flex: 1;
                 overflow: hidden;
                 img{
@@ -95,7 +97,7 @@
                             // padding-right: 50px;
                             width: 650px;
                             padding-left: 10px;
-                            background-image: linear-gradient(60deg, #c2185b, rgba(#02527C, 0.2));
+                            // background-image: linear-gradient(60deg, #c2185b, rgba(#02527C, 0.2));
                         }
                         h1{
                             margin-bottom: 10px;
@@ -149,19 +151,19 @@
             // background-color: aquamarine;
             text-align: right;
             overflow: hidden;
-            &:hover{
-                .box-shift{
-                    background-color: #c2185b;
-                    // border-radius: 0 0 10% 0;
-                }
-                .image{
-                    border-radius: 0 10% 0 10%;
-                    img{
-                        transform: scale(1.0);
-                        margin-top: -60px;
-                    }
-                }
-            }
+            // &:hover{
+            //     .box-shift{
+            //         background-color: #c2185b;
+            //         // border-radius: 0 0 10% 0;
+            //     }
+            //     .image{
+            //         border-radius: 0 10% 0 10%;
+            //         img{
+            //             transform: scale(1.0);
+            //             margin-top: -60px;
+            //         }
+            //     }
+            // }
             .image{
                 position: absolute;
                 top: 0;
@@ -186,9 +188,9 @@
                 .pname{
                     height: 80px;
                     // background-color: #1d9deb;
-                    margin: 0;
-                    padding: 10px;
-                    margin-top: -8px
+                    // margin: 0;
+                    // padding: 10px;
+                    // margin-top: -8px
                     h1, p{
                         margin: 0;
                         padding: 0;
