--- a/src/app/media-query/_laptop.scss
+++ b/src/app/media-query/_laptop.scss
@@ -1,29 +1,6 @@
 
 
-.pointer-container{
-    display: block;
-    position: absolute;
-    top: 65%;
-    margin: 0 auto;
-    left: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: -50px;
-    z-index: 10;
-    // background-color: red;
-    text-align: center;
-    // border: 1px solid lighten(#034060, 10);
-    // border-radius: 50%;
-    mat-icon{
-        font-size: 3em;
-        width: 100px;
-        height: 100px;
-        transition: .5s;
-        padding-top: 20px;
-        color: lighten(#034060, 30);
-    }
 
-}
 
 
 .header-section{
@@ -37,6 +14,35 @@
         // background-repeat: no-repeat;
         // background-attachment: fixed;
         overflow: hidden;
+        .pointer-container{
+            display: block;
+            position: absolute;
+            bottom: 0;
+            margin: 0 auto;
+            margin-bottom: 20px;
+            left: 50%;
+            width: 100px;
+            height: 100px;
+            margin-left: -50px;
+            z-index: 10;
+            // background-color: red;
+            text-align: center;
+            border: 1px solid lighten(#034060, 10);
+            border-radius: 50%;
+            &:hover{
+                cursor: pointer;
+                background-color: rgba(#c2185b, 0.2);
+            }
+            mat-icon{
+                font-size: 3em;
+                width: 100px;
+                height: 100px;
+                transition: .5s;
+                padding-top: 20px;
+                color: lighten(#034060, 30);
+            }
+        
+        }
         img{
             width: 100%;
             height: 1000px;
@@ -51,7 +57,7 @@
             width: 100%;
             height: 550px;
             display: flex;
-            background-color: rgba(#034060, 0.9);
+            // background-color: rgba(#034060, 0.9);
             z-index: 10;
             .float-image{
                 display: block;
@@ -63,7 +69,7 @@
                 border: 10px solid #ffffff;
                 border-radius: 1% 20% 20% 40%;
                 transform: rotate(-10deg);
-                background-color: #034060;
+                // background-color: #034060;
                 flex: 1;
                 overflow: hidden;
                 img{
@@ -99,7 +105,7 @@
                             // padding-right: 50px;
                             width: 650px;
                             padding-left: 10px;
-                            background-image: linear-gradient(60deg, #c2185b, rgba(#02527C, 0.2));
+                            // background-image: linear-gradient(60deg, #c2185b, rgba(#02527C, 0.2));
                         }
                         h1{
                             margin-bottom: 10px;
@@ -153,19 +159,19 @@
             // background-color: aquamarine;
             text-align: right;
             overflow: hidden;
-            &:hover{
-                .box-shift{
-                    background-color: #c2185b;
-                    // border-radius: 0 0 10% 0;
-                }
-                .image{
-                    border-radius: 0 10% 0 10%;
-                    img{
-                        transform: scale(1.0);
-                        margin-top: -60px;
-                    }
-                }
-            }
+            // &:hover{
+            //     .box-shift{
+            //         background-color: #c2185b;
+            //         // border-radius: 0 0 10% 0;
+            //     }
+            //     .image{
+            //         border-radius: 0 10% 0 10%;
+            //         img{
+            //             transform: scale(1.0);
+            //             margin-top: -60px;
+            //         }
+            //     }
+            // }
             .image{
                 position: absolute;
                 top: 0;
@@ -190,7 +196,7 @@
                 .pname{
                     height: 60px;
                     // background-color: #1d9deb;
-                    margin: 0;
+                    // margin: 0;
                     // width: 70%;
                     // margin: 0 auto;
                     background-color: darken(#c2185b, 10);
@@ -595,7 +601,7 @@
 }
 .our-team{
     display: block;
-    height: 650px;
+    height: 600px;
     background-image: url('/assets/images/team2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -605,9 +611,9 @@
     -webkit-filter: grayscale(70%);
     filter: grayscale(70%);
     background-attachment: fixed;
-    padding: 50px 0px;
+    padding: 80px 0px;
     .team{
-        height: 650px;
+        height: 490px;
         transition: .5s;
         // &:hover{
         //     transform: rotate(0deg);
@@ -629,7 +635,7 @@
             flex-direction: row;
             .group{
                 width: 350px;
-                height: 500px;
+                height: 490px;
                 background: transparent;
             }
             .group:nth-child(2){
