--- a/src/app/media-query/_mobile.scss
+++ b/src/app/media-query/_mobile.scss
@@ -3,30 +3,7 @@
 p{
     font-family: 'Roboto', $font-stack;
 }
-.pointer-container{
-    display: none;
-    position: absolute;
-    top: 42%;
-    margin: 0 auto;
-    left: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: -50px;
-    z-index: 10;
-    // background-color: red;
-    text-align: center;
-    // border: 1px solid lighten(#034060, 10);
-    // border-radius: 50%;
-    mat-icon{
-        font-size: 3em;
-        width: 100px;
-        height: 100px;
-        transition: .5s;
-        padding-top: 20px;
-        color: lighten(#034060, 30);
-    }
 
-}
 
 .header-section{
     width: 100%;
@@ -39,6 +16,32 @@ p{
         // background-repeat: no-repeat;
         // background-attachment: fixed;
         overflow: hidden;
+        .pointer-container{
+            // display: none;
+            position: absolute;
+            // top: 42%;
+            bottom: 0;
+            margin: 0 auto;
+            margin-bottom: 10px;
+            left: 50%;
+            width: 100px;
+            height: 100px;
+            margin-left: -50px;
+            z-index: 10;
+            // background-color: red;
+            text-align: center;
+            // border: 1px solid lighten(#034060, 10);
+            // border-radius: 50%;
+            mat-icon{
+                font-size: 3em;
+                width: 100px;
+                height: 100px;
+                transition: .5s;
+                padding-top: 20px;
+                color: lighten(#034060, 30);
+            }
+        
+        }
         img{
             width: 100%;
             position: absolute;
@@ -53,7 +56,7 @@ p{
             width: 100%;
             height: 400px;
             display: flex;
-            background-color: rgba(#034060, 0.9);
+            background-color: lighten(#034060 , 10);
             z-index: 10;
             .float-image{
                 display: none;
@@ -100,7 +103,7 @@ p{
                             // padding-right: 50px;
                             width: 300px;
                             padding-left: 10px;
-                            background-image: linear-gradient(60deg, #c2185b, rgba(#02527C, 0.2));
+                            background-image: linear-gradient(60deg, #c2185b, transparent);
                         }
                         h1{
                             margin-bottom: 10px;
