--- a/src/app/media-query/_tablets.scss
+++ b/src/app/media-query/_tablets.scss
@@ -1,36 +1,36 @@
 
-.pointer-container{
-    display: block;
-    position: absolute;
-    top: 35%;
-    margin: 0 auto;
-    left: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: -50px;
-    z-index: 10;
-    // background-color: red;
-    text-align: center;
-    border: 1px solid lighten(#034060, 10);
-    border-radius: 50%;
-    mat-icon{
-        font-size: 3em;
-        width: 100px;
-        height: 100px;
-        transition: .5s;
-        padding-top: 20px;
-        color: lighten(#034060, 30);
-        &:hover{
-            // margin-top: 20px;
-            cursor: pointer;
-            color: lighten(#034060, 10);
-        }
-    }
-    &:hover{
-        background-color: rgba(#c2185b, 0.2);
-    }
+// .pointer-container{
+//     display: block;
+//     position: absolute;
+//     top: 35%;
+//     margin: 0 auto;
+//     left: 50%;
+//     width: 100px;
+//     height: 100px;
+//     margin-left: -50px;
+//     z-index: 10;
+//     // background-color: red;
+//     text-align: center;
+//     border: 1px solid lighten(#034060, 10);
+//     border-radius: 50%;
+//     mat-icon{
+//         font-size: 3em;
+//         width: 100px;
+//         height: 100px;
+//         transition: .5s;
+//         padding-top: 20px;
+//         color: lighten(#034060, 30);
+//         &:hover{
+//             // margin-top: 20px;
+//             cursor: pointer;
+//             color: lighten(#034060, 10);
+//         }
+//     }
+//     &:hover{
+//         background-color: rgba(#c2185b, 0.2);
+//     }
 
-}
+// }
 
 
 .header-section{
@@ -57,7 +57,7 @@
             width: 100%;
             height: 500px;
             display: flex;
-            background-color: rgba(#034060, 0.9);
+            background-color: rgba(#034060, 0.6);
             z-index: 10;
             .float-image{
                 position: relative;
@@ -68,7 +68,8 @@
                 border: 10px solid #ffffff;
                 border-radius: 1% 20% 20% 40%;
                 transform: rotate(-10deg);
-                background-color: #034060;
+                // background-color: #F5F5F5;
+                // background-color: lighten(#034060 , 10);
                 flex: 1;
                 overflow: hidden;
                 img{
@@ -103,7 +104,7 @@
                             // padding-right: 50px;
                             width: 650px;
                             padding-left: 10px;
-                            background-image: linear-gradient(60deg, #c2185b, rgba(#02527C, 0.2));
+                            // background-image: linear-gradient(60deg, #c2185b, rgba(#5b737e, 0.5));
                         }
                         h1{
                             margin-bottom: 10px;
@@ -192,7 +193,7 @@
                     transform: scale(1.1);
                 }
                 .pname{
-                    height: 60px;
+                    // height: 60px;
                     // background-color: #1d9deb;
                     margin: 0;
                     h1, p{
