--- a/src/app/media-query/_tablets.scss
+++ b/src/app/media-query/_tablets.scss
@@ -283,8 +283,8 @@
             text-align: center;
             img{
                 width: 150px;
-                opacity: 0.2;
-                filter: grayscale(100%);
+                // opacity: 0.2;
+                // filter: grayscale(100%);
             }
         }
     }
