--- a/src/app/media-query/_desktop.scss
+++ b/src/app/media-query/_desktop.scss
@@ -278,8 +278,8 @@
             text-align: center;
             img{
                 width: 150px;
-                opacity: 0.2;
-                filter: grayscale(100%);
+                // opacity: 0.2;
+                // filter: grayscale(100%);
             }
         }
     }
