--- a/src/app/media-query/_mobile.scss
+++ b/src/app/media-query/_mobile.scss
@@ -198,7 +198,7 @@ p{
                     background-color: #034060;
                     padding: 10px;
                     margin-top: -40px;
-                    h1, p{
+                    h1, p, small{
                         margin: 0;
                         padding: 0;
                         text-align: center;
@@ -214,6 +214,7 @@ p{
                         color: darken(#F5F5F5, 20);
                         text-transform: uppercase;
                         padding: 5px 0px;
+                        margin-bottom: 5px;
                         font-weight: 200;
                     }
 
@@ -299,7 +300,7 @@ p{
             text-align: center;
             img{
                 width: 100px;
-                opacity: 0.2;
+                opacity: 0.5;
                 filter: grayscale(100%);
             }
         }
