--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -216,18 +216,18 @@
                 <div class="member">
                     <img src="assets/images/kk.png" alt="">
                     <div class="title">
-                        <h1>Kelechi Okoro</h1>
+                        <h1>Kennedy Okoroha</h1>
                         <mat-divider></mat-divider>
-                        <p>Partner</p>
+                        <p>Case Worker</p>
                     </div>
                 </div>
                 <div class="empty-member"></div>
                 <div class="member">
                     <img src="assets/images/godwill.png" alt="">
                     <div class="title">
-                        <h1>Godwill</h1>
+                        <h1>Godwill Agbakwue</h1>
                         <mat-divider></mat-divider>
-                        <p>Partner</p>
+                        <p>Solicitor</p>
                     </div>
                 </div>
             </div>
@@ -255,9 +255,9 @@
                 <div class="member">
                     <img src="assets/images/lloyd.png" alt="">
                     <div class="title">
-                        <h1>Lloyd</h1>
+                        <h1>Lloyd McDonald</h1>
                         <mat-divider></mat-divider>
-                        <p>Partner</p>
+                        <p>Case Worker</p>
                     </div>
                 </div>
             </div>
